--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,8 @@
   <meta name="Portfolio of Coleman Buffa" content="Coleman Buffa is a web developer seeking full time employment" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet">
   <title>Coleman Buffa</title>
   <style>
     * {
